Added premoderated label, added roles

--- a/config/locales/he.yml
+++ b/config/locales/he.yml
@@ -16,3 +16,4 @@ he:
   delete_button: "מחיקה"
   cancel_button: "ביטול"
   read_untranslated_button: "קרא בשפת מקור"
+  premoderated: "לא עבר עריכה"
