--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -16,3 +16,4 @@ ru:
   delete_button: "Удалить"
   cancel_button: "Отмена"
   read_untranslated_button: "Прочесть в оригинале"
+  premoderated: "Не проверенно"
