--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -16,3 +16,4 @@ en:
   delete_button: "Delete"
   cancel_button: "Cancel"
   read_untranslated_button: "Read untranslated"
+  premoderated: "Pre-moderated"
