Added links to translation mode

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -18,6 +18,7 @@ en:
   read_untranslated_button: "Read untranslated"
   premoderated: "Pre-moderated"
   submit: "Submit"
+  translation_mode: "Translation mode"
   complaints:
     buttons:
       complain: "Complain on translation"
